<resources>
    <!--                     DEVICE_PROFILE && DEVICE_PROFILE_START                              -->

    <string name="app_name">My Devices</string>

    <string name="tv_device_profile_temperature">Temperature: 19ºC</string>
    <string name="tv_device_profile_moisture">Moisture: 40%</string>
    <string name="tv_device_profile_soil">Soil: —</string>
    <string name="tv_device_profile_last_update">( Last Update: Today at 12:40 )</string>
    <string name="tv_device_profile_remaining_time">Remaining irrigation time: 0h 23min 46s</string>

    <string name="btn_device_profile_manual_irrigation">MANUAL IRRIGATION</string>
    <string name="btn_device_profile_settings">SETTINGS</string>
    <string name="btn_device_profile_cancel">CANCEL IRRIGATION</string>

    <!--                                   MANUAL IRRIGATION                                     -->

    <string name="tv_manual_irrigation_title">Manual Irrigation</string>
    <string name="tv_manual_irrigation_comment">Specify the amount of time in minutes that you want the irrigation device to work:</string>
    <string name="tv_manual_irrigation_hint"> Numeric input box</string>

    <string name="btn_manual_irrigation_cancel">CANCEL</string>
    <string name="btn_manual_irrigation_start">START</string>

    <!--                                 SETTINGS INFORMATION                                    -->

    <string name="tv_settings_information_device">Device name</string>
    <string name="tv_settings_information_frequency">Information refresh frequency</string>
    <string name="tv_settings_information_hint">Numeric input in seconds</string>

    <string name="btn_settings_information_irrigation_rules">IRRIGATION RULES</string>
    <string name="tv_settings_information_hint_device">Edit device name</string>
    <string name="btn_settings_information_save">SAVE</string>

    <!--                              LIST ITEMS conditionLabel                                  -->

    <string-array name="timeConditionLabel" >
        <item>Time1</item>
        <item>Time2</item>
    </string-array>


    <!--                              LIST ITEMS conditionLabel                                  -->

    <string-array name="conditionLabel" >
        <item>Temperature is higher than</item>
        <item>Temperature is lower than</item>
        <item>Moistness is higher than</item>
    </string-array>

    <!--                              LIST ITEMS valueCondition                                   -->

    <string-array name="valueCondition" >
        <item>12</item>
        <item>22</item>
        <item>43</item>
    </string-array>

    <!--                              LIST ITEMS mesureCondition                                   -->

    <string-array name="measureCondition" >
        <item>ºC</item>
        <item>ºC</item>
        <item>%</item>
    </string-array>

    <!--                              LIST ITEMS ACTIVITY MAIN                                   -->

    <string-array name="devicesArray" >
        <item>Device 1</item>
        <item>Device 2</item>
        <item>Device 3</item>
        <item>Device 4</item>
    </string-array>

    <!--                              DESCRIPTION ACTIVITY MAIN                                   -->

    <string-array name="descriptionArray">
        <item> Last irrigation: today at 11:00</item>
        <item>Last irrigation: today at 09:00</item>
        <item>Last irrigation: today at 14:00</item>
        <item>Last irrigation: today at 21:00</item>
    </string-array>

    <!--                              LIST ITEMS RULES                                   -->

    <string-array name="rulesArray" >
        <item>Rule 1</item>
        <item>Rule 2</item>
        <item>Rule 3</item>
        <item>Rule 4</item>
    </string-array>

    <!--                              LIST ITEMS CONDITIONS                                 -->

    <string-array name="conditionsArray" >
        <item>Time condition</item>
        <item>Temperature is higher than</item>
        <item>Temperature is lower than</item>
        <item>Moistness is higher than</item>
        <item>Moistness is lower than</item>
    </string-array>

    <!--                              LIST ITEMS TIME CONDITIONS                                 -->

    <string-array name="timeConditionsArray" >
        <item>Start Time</item>
        <item>End Time</item>
        <item>Days Of The Week</item>
        <item>Months Of The Year</item>
        <item>Specific dates</item>
    </string-array>

    <!--                              DESCRIPTION ACTIVITY MAIN                                   -->

    <string-array name="timeConditionsDescriptionArray">
        <item>9:00</item>
        <item>12:30</item>
        <item>M T W T F Sa Su </item>
        <item>Jan Feb Mar</item>
        <item> 2/3/2019 </item>
    </string-array>

    <!--                               IRRIGATION RULE                                           -->

   <string name="irrigationText1">Irrigation rule name 1</string>
   <string name="irrigationText2">Irrigation rule name 2</string>
   <string name="btnIrrigationAdd">Add rule</string>
   <string name="btnIrrigationSave">Save</string>

    <!--                                CREATE RULE                                              -->

    <string name="ruleNameDescription">Rule name:</string>
    <string name="ruleName">Irrigation rule name</string>
    <string name="btnRuleNameCancel">Cancel</string>
    <string name="btnRuleNameCreate">Create</string>

    <!--                            EDIT IRRIGATION RULE                                         -->
    <string name="environmentalConditions" translatable="false"> Environmental Conditions</string>
    <string name="timeConditions" translatable="false">Time Conditions</string>
    <string name="editTemperatureIrrig">Temperature less than:</string>
    <string name="editTemperatureIrrigC">ºC</string>
    <string name="btnTimeCondition">Time condition</string>
    <string name="btnAddCondition">Add condition</string>
    <string name="btnSaveCondition">Save</string>

    <!--                                   ADD CONDITION                                         -->

    <string name="btnTimeConditions">Time condition</string>
    <string name="btnTemperatureH">Temperature is higher than:</string>
    <string name="btnTemperatureL">Temperature is lower than:</string>
    <string name="btnMoistnessH">Moistness is higher than:</string>
    <string name="btnMoistnessL">Moistness is lower than:</string>

    <!--                                   EDIT TIME                                             -->
    <string name="btnOKTime">OK</string>
    <string name="btnCancelTime">CANCEL</string>

    <!--                                   EDIT DATE                                             -->
    <string name="btnOKDate">OK</string>
    <string name="btnCancelDate">CANCEL</string>

    <!--                                   TIME CONDITIONS                                         -->

    <string name="btnStartTime">Start time</string>
    <string name="btnEndTime">End time</string>
    <string name="btnDays">Days of the week</string>
    <string name="btnMonths">Months of the year</string>
    <string name="btnSpecificDates">Specific Dates</string>
    <string name="btnSaveTimeConditions">Save</string>
    <string name="monthsText">Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec</string>
    <string name="daysText">M T W T F Sa Su</string>
    <string name="startTimeText">9:00</string>
    <string name="endTimeText">12:30</string>

    <!--                                   TOOLBAR TITLES                                         -->

    <string name="DeviceProfile">Device name</string>
    <string name="DeviceProfileStart">Device name</string>
    <string name="IrrigationRules">Irrigation Rules</string>
    <string name="DeviceSettings">Device Settings</string>
    <string name="ManualIrrigation">Manual Irrigation</string>
    <string name="CreateRules">Create Rules</string>
    <string name="EditIrrigationRules">Irrigation Rules Name</string>
    <string name="AddCond">Add New Condition</string>
    <string name="TimeConditions">Time Conditions</string>






</resources>
