<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_326"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_si_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_settings_information_device"
            android:textColor="#000000"
            android:textSize="@dimen/dim_20"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_settings_information_hint_device"
            android:layout_marginBottom="@dimen/dim_20"
        />

        <TextView
            android:id="@+id/tv_si_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_settings_information_frequency"
            android:textColor="#000000"
            android:textSize="@dimen/dim_20"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_settings_information_hint"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/irrigationRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_settings_information_irrigation_rules"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:padding="@dimen/dim_20"
        android:layout_centerInParent="true"
    />


    <Button
        android:id="@+id/saveIrrigation"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/saveicon"
        />

</RelativeLayout>