<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp">

    <LinearLayout
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTemperatureIrrig" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editTemperatureIrrigC" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/timeCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/temperature"
        android:paddingTop="18dp"
        android:layout_alignLeft="@+id/temperature">

        <Button
            android:id="@+id/buttonTimeCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnTimeCondition" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/addCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAddCondition"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/saveConditons"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btnSaveCondition" />

</RelativeLayout>