<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dim_18">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="361dp"
            android:layout_height="361dp"
            android:layout_marginBottom="@dimen/dim_10"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_dvs_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_device_profile_temperature" />

        <TextView
            android:id="@+id/tv_dvs_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_device_profile_moisture"/>

        <TextView
            android:id="@+id/tv_dvs_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_device_profile_soil"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_10"
            android:layout_marginBottom="@dimen/dim_20"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btnDPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_device_profile_cancel"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button_cancel"
            android:padding="@dimen/dim_10"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_device_profile_remaining_time"
                android:layout_marginTop="@dimen/dim_10"
                android:layout_marginRight="@dimen/dim_6"
                android:textColor="#FF0000"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/dim_6" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
