<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp">

    <RelativeLayout
        android:id="@+id/irrigationRule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonIrrigationRule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/irrigationText1"/>
        <Switch
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/irrigationRule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/irrigationRule1">
        <Button
            android:id="@+id/buttonIrrigationRule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/irrigationText2"/>
        <Switch
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:id="@+id/addRule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIrrigationAdd"
        android:layout_alignParentBottom="true"
    />

    <Button
        android:id="@+id/saveIrrigationRules"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/btnIrrigationSave" />

</RelativeLayout>